<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="holo">Holo</string>
	<string name="normal">Normal</string>
	<string name="reverse">Reverse</string>
	<string name="firstedition">1st Edition</string>
    <string name="lang">US</string>
    <string name="principal_title">Main</string>
    <string name="principal_list">Extensions</string>
    <string name="card_img">Card</string>
    <string name="card_info">Info</string>
    <string name="card_edit">Edit</string>
    <string name="app_name">Pokemon trading card</string>
    <string name="app_desc">Manage your cards. Application developped by Kevin Le Perf aka codlab aka pokasmax</string>
    <string name="app_label">pkmn card</string>
    <string name="main_label">Pokemon trading card</string>
    <string name="extension_label">Extension</string>
    <string name="card_label">Card</string>
    <string name="possedees">own :</string>
    <string name="total">number :</string>
    <string name="seeext">Go to the extensions listing</string>
    <string name="apropos">To display the different card, while displaying a specific extension, press the menu button and choose download.\n\n\ To choose your extension, scroll the list and click on it.\Software developped by codlab aka pokasmax. Scans are provide by www.pokecardex.com.\n\nThis software is not endorsed, licenced or sponsored by Nintendo, GameFreak, The Pokemon Company ou or all other company affiliated by The Pokemon Company.\n\nAll rights, patents belongs to their owner.
        
        This version can be ... slow when you scroll down an extension set or the Gallery, but in fact, it is because now, to improve memory, if an image has not his thumbnailed version, the application create it. This thing is made only one time when you see an extension set. So it will run smoothly after that ;)</string>
    <string name="apropos2">Do not forget to download the cards through the Download button on the topbar or with the menu button available on your smartphones/tablet.
        Please update the application on all your smartphones/tablets to be able to make synchronization between devices !!
        I had to change the upload/download process and previous save are not compatible with this core (... it is also debugged now ;)</string>
    <string name="extlist">Extensions list</string>
    <string name="faiblesse">Weakness : </string>
    <string name="resistance">Resistance : </string>
    <string name="retraite">Retreat Cost : </string>
    <string name="pv">HP</string>
    <string name="collection">collection : </string>
    <string name="extposses">cards owned : </string>
    <string name="download">DL FR</string>
    <string name="downloadus">DL EN</string>
    <string name="downloades">DL SP</string>
    <string name="downloadit">DL IT</string>
    <string name="downloadde">DL GER</string>
    <string name="cardfr">Use FR</string>
    <string name="cardus">Use EN</string>
    <string name="cardes">Use SP</string>
    <string name="cardit">Use IT</string>
    <string name="cardde">Use GER</string>
    <string name="quickfr">Quick Edit : French</string>
    <string name="quickus">Quick Edit : English</string>
    <string name="quickes">Quick Edit : Spanish</string>
    <string name="quickit">Quick Edit : Italian</string>
    <string name="quickde">Quick Edit : German</string>
    <string name="editfr">Edit French Cards</string>
    <string name="editus">Edit English Cards</string>
    <string name="edites">Edit Spanish Cards</string>
    <string name="editit">Edit Italien Cards</string>
    <string name="editde">Edit German Cards</string>
        <string name="nosd">No SDCard found ! /sdcard/</string>
    <string name="urlnotfound">The package\'s url returned an error</string>
    <string name="accounttitle">Synchronize online</string>
    <string name="accountmail">Mail</string>
    <string name="accountpassword">Password</string>
    <string name="accountcreate">Create</string>
    <string name="accountauth">Authenticate</string>
    <string name="accountauthok">Succesfully authenticate !</string>
    <string name="accountmailincorrect">The mail provided is not correct</string>
    <string name="accountexist">This account already exists</string>
    <string name="accountrequest">Send mail directly to pokeke100@gmail.com to request reset password, lost one or whatever.</string>
    <string name="accountdown">Download Infos</string>
    <string name="accountdownsure">Are you sure you want to download information? Can erase some information and does not reset previous ones</string>
    <string name="accountup">Upload Infos</string>
    <string name="accountupsure">Are you sure you want to upload this device information? Will erase previous on the server</string>
    <string name="accountcreateok">This account has been created</string>
    <string name="accountdownloadok">Successfully downloaded</string>
    <string name="accountuploadok">Successfully uploaded</string>
    <string name="accountwroteok">Sucessfully wrote</string>

    <string name="accountauthtitle">Log in</string>
    <string name="accounterror">An error occured</string>
    <string name="accountwritetitle">Writing</string>
    <string name="accountcreatetitle">Creation</string>
    <string name="accountdownloadtitle">Download</string>
    <string name="accountuploadtitle">Upload</string>
    <string name="accountwaittext">Please Wait ...</string>
    <string name="accountbeta">Currently in beta. A push version will arrive soon. Thanks to report any bug or any comments.
        
        No TCGO Code will be backed up / restored !</string>
    
    <string name="codestitlemanage">Manage tcgo code</string>
    <string name="codesadd">Add</string>
    <string name="codesubmit">Submit</string>
    <string name="codesunknow">Unknown</string>
    <string name="codesvalid">Valid</string>
    <string name="codeswrong">Wrong</string>
    <string name="codesvalidate">Wrong</string>
    <string name="codesubmitwrong">The submitted code is wrong</string>
    <string name="codeaskdelete">Do you want to delete this code?</string>
    <string name="codesubmitok">Code added</string>
    <string name="managetcgo">Manage TCGO Code</string>
    <string name="managetcgolittle">You\'ll never lose your code</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>


    <string name="drive_blackberry">You are currently using the Android ported app to Blackberry. Due to an issue with the opening webview and the soft keyboard of your device, please enter here your login info. THese will be copied in the login page from the Google Authentication Page.</string>
    <string name="drive_blackberry_email">Your Email</string>
    <string name="drive_blackberry_password">Your password</string>
    <string name="drive_login">Log to your drive account</string>

    <string name="download_flappi_kachu">Click on the banner to download the newest Flappi Kachu game for your device!</string>
</resources>