<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_donation"
        android:icon="@drawable/ic_action_store"
        android:showAsAction="always"
        android:title="@string/make_donation" />
    <item
        android:id="@+id/principal_paypal"
        android:title=""
        android:icon="@drawable/paypal_button"
        android:showAsAction="always" />
    <!-- ifRoom| -->
    <item
        android:id="@+id/principal_useus"
        android:title="@string/cardus"
        android:icon="@drawable/iconus"
        android:showAsAction="withText|always" />
    <item
        android:id="@+id/principal_usefr"
        android:title="@string/cardfr"
        android:icon="@drawable/iconfr"
        android:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/principal_usede"
        android:title="@string/cardde"
        android:icon="@drawable/iconde"
        android:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/principal_usees"
        android:title="@string/cardes"
        android:icon="@drawable/icones"
        android:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/principal_useit"
        android:title="@string/cardit"
        android:icon="@drawable/iconit"
        android:showAsAction="withText|ifRoom" />
</menu>