<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingLeft="5dp"
                android:textSize="8dp"
                android:text="@string/download_flappi_kachu"
                android:gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/flappi"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/flappi"
                android:layout_marginBottom="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/nav_overlay" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingLeft="5dp"
                android:text="@string/apropos" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:text="@string/apropos2"
                android:textColor="#ff0000" />
            <include layout="@layout/subads" />
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <include layout="@layout/ads"/>
    </LinearLayout>


</FrameLayout>