<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/fond" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/maintitle"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/codes_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/codestitlemanage"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/codesadd"
                android:padding="5dp" />

                <EditText
                    android:id="@+id/codes_addcode"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="left" />
                <Button 
                    android:id="@+id/codes_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/codesubmit" />

            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@drawable/stripexml"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/codes_liste"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:fastScrollEnabled="true" />

    <include layout="@layout/ads" />
</LinearLayout>