<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <WebView
            android:id="@+id/drive_web"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    <fr.codlab.cartes.widget.RobotoTextview
        typeface="thin"
            android:id="@+id/drive_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/drive_download_upload_area"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal">

            <Button
                    android:id="@+id/drive_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Download distant file"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal">

            <Button
                    android:id="@+id/drive_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload local file"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/drive_button_area"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal">

        <LinearLayout
                android:id="@+id/drive_blackberry"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">
            <fr.codlab.cartes.widget.RobotoTextview
                typeface="thin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/drive_blackberry"
                android:textSize="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp" />
            <fr.codlab.cartes.widget.RobotoTextview
                typeface="thin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drive_blackberry_email" />
            <EditText
                    android:id="@+id/drive_blackberry_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            <fr.codlab.cartes.widget.RobotoTextview
                typeface="thin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drive_blackberry_password" />
            <EditText
                    android:id="@+id/drive_blackberry_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </LinearLayout>

        <Button
                android:id="@+id/drive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drive_login"
                android:background="@drawable/drive_button"/>
    </LinearLayout>

    <!--<include layout="@layout/ads"/>-->

</LinearLayout>